--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <ul>
     {% for post in site.posts %}
     <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ post.url }}" | replace_first: "/", "">{{ post.title }}</a>
         </li>
     {% endfor %}
 </ul>
